--- a/Foco-Delivery-Network/Foco-Delivery-Network/Views/ItemsPage.xaml
+++ b/Foco-Delivery-Network/Foco-Delivery-Network/Views/ItemsPage.xaml
@@ -28,12 +28,12 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <StackLayout Padding="10">
-                        <Label Text="{Binding Name}" 
+                        <Label Text="{Binding MinInfo}" 
                                 d:Text="{Binding .}"
                                 LineBreakMode="NoWrap" 
                                 Style="{DynamicResource ListItemTextStyle}" 
                                 FontSize="16" />
-                        <Label Text="{Binding Comments}" 
+                        <Label Text="{Binding MinInfo}" 
                                 d:Text="Item descripton"
                                 LineBreakMode="NoWrap"
                                 Style="{DynamicResource ListItemDetailTextStyle}"
