--- a/Foco-Delivery-Network/Foco-Delivery-Network/Views/NewItemPage.xaml
+++ b/Foco-Delivery-Network/Foco-Delivery-Network/Views/NewItemPage.xaml
@@ -14,10 +14,10 @@
     
     <ContentPage.Content>
         <StackLayout Spacing="20" Padding="15">
-            <Label Text="Text" FontSize="Medium" />
-            <Entry Text="{Binding Item.Text}" d:Text="Item name" FontSize="Small" />
-            <Label Text="Description" FontSize="Medium" />
-            <Editor Text="{Binding Item.Description}" d:Text="Item description" FontSize="Small" Margin="0" />
+            <Label Text="Minimal Description" FontSize="Medium" />
+            <Entry Text="{Binding Delivery.MinInfo}" d:Text="Item name" FontSize="Small" />
+            <Label Text="Full Description" FontSize="Medium" />
+            <Editor Text="{Binding Delivery.FullInfo}" d:Text="Item description" FontSize="Small" Margin="0" />
         </StackLayout>
     </ContentPage.Content>
     
